tests/sksl/errors/ReservedNameFvec2.glsl
### Compilation failed:

error: 1: name 'fvec2' is reserved
int fvec2;
    ^^^^^
1 error
